tests/paczka1/fuzzy1/31979531.err
Error in line 3: A581 A645 0,1
Error in line 7: i7dXywHw6zr A581 11,8
Error in line 15: OHtI S995 60,0
Error in line 19: 6vklgMmJw0 A5v1 62,3
Error in line 5: A581 A267 18,4
Error in line 28: A581 S995 -3,2
Error in line 25: 68klgMmJw0 A581 101,5
Error in line 30: 8dvSfOPM A645 197,3
Error in line 34: i7dXywHw6zr S995 88,1
